testData/diagnostics/leading_zero_3.diag.txt
testData/diagnostics/leading_zero_3.nut line = (1) column = (6) : error: leading 0 is not allowed, octal numbers are not supported
print(00.1)
      ^

